# jobs-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: resume.md.example
src/jobs_ai/: __init__.py  ai.py  config.py  db.py  main.py  models.py  preferences.py  resume.py  workflow.py
src/jobs_ai/job_sources/: __init__.py  base.py  remotive.py  sample.py
src/jobs_ai/static/: app.js  index.html  styles.css
src/jobs_ai/submitters/: __init__.py  base.py  manual.py  playwright_form.py
tests/: test_ai.py  test_db.py  test_job_source.py  test_preferences.py
