[project]
name = "jobs-ai"
version = "0.1.0"
description = "AI-assisted job discovery, resume tailoring, and application workflow manager."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "openai>=1.99.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
automation = [
    "playwright>=1.46.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[project.scripts]
jobs-ai = "jobs_ai.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobs_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
